--- a/src/index.css
+++ b/src/index.css
@@ -257,3 +257,47 @@ code {
     transform: translateX(-2000px);
   }
 }
+.modal-content {
+  border-radius: 10px !important;
+  border: 10px !important;
+}
+.pinkBg {
+  background-color: #ff0000 !important;
+  background-image: linear-gradient(90deg, #ff0000, #ff0000);
+}
+
+.intro-banner-vdo-play-btn .ripple {
+  position: absolute;
+  width: 160px;
+  height: 160px;
+  z-index: 1;
+  left: 45%;
+  top: 52%;
+  opacity: 0;
+  margin: -80px 0 0 -80px;
+  border-radius: 100px;
+  -webkit-animation: ripple 1.8s infinite;
+  animation: ripple 1.8s infinite;
+}
+
+@-webkit-keyframes ripple {
+  0% {
+    opacity: 1;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+.intro-banner-vdo-play-btn .ripple:nth-child(2) {
+  animation-delay: 0.3s;
+  -webkit-animation-delay: 0.3s;
+}
+.intro-banner-vdo-play-btn .ripple:nth-child(3) {
+  animation-delay: 0.6s;
+  -webkit-animation-delay: 0.6s;
+}
