--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 code {
@@ -256,6 +258,11 @@ code {
   100% {
     transform: translateX(-2000px);
   }
+}
+.leaflet-container {
+  height: 700px;
+  width: 80%;
+  margin: 0 auto;
 }
 .modal-content {
   border-radius: 10px !important;
